[project]
name = "code-review-env"
version = "1.0.0"
description = "A multi-task code review RL environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
    "requests==2.32.3",
    "openai>=2.7.2",
    "pyyaml==6.0.2",
    "httpx==0.28.1",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "serverapp.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]

[tool.openenv]
name = "code-review-env"
version = "1.0.0"
entry_point = "server:app"
port = 7860